--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="">
         <div class="uk-background-cover uk-background-fixed uk-height-1-1 uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url(./img/top.jpg);" uk-height-viewport="offset-top: true; offset-bottom: 5">
           <!--<p class="uk-heading-2xlarge uk-text-success uk-overlay uk-overlay-default"></p>-->
-          <img data-src="img/logo.png" width="500vh" uk-img>
+          <img data-src="img/logo.png" width="500vh" uk-img alt="logo-image">
         </div>
       </div>
 
@@ -216,7 +216,7 @@
             </ul>
             <ul class="uk-switcher switcher-container">
               <li>
-                <img data-src="./img/dendens_apex_datapack/apexHeader.png" width="500" alt="" uk-img><br>
+                <img data-src="./img/dendens_apex_datapack/apexHeader.png" width="500" alt="dendens_apex_detapack_thumnal" uk-img><br>
                 APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。 <br>
                 β版ではシングルプレイのみ対応しています。（マルチプレイにて動作させると、意図しない挙動や、そもそも挙動しないなどがあると思います。） <br>
                 主に対対MOB用に制作してるので、プレイヤー同士への効果はありません。 <br>
@@ -310,7 +310,7 @@
                 </div>
               </li>
               <li>
-                <img data-src="./img/dendens_Compass_Resources/compass_top.jpg" width="500" alt="" uk-img><br>
+                <img data-src="./img/dendens_Compass_Resources/compass_top.jpg" width="500" alt="dendens_compass_thumnal" uk-img><br>
                 画面上に方角を表示させるデータパックです<br>
                 制作者 でんでん<br>
                 <span uk-icon="icon: cloud-download"></span> <a href="./dist/denden_compass/dendens_compass.zip">dendens_compass</a>
@@ -321,15 +321,15 @@
                       <div class="uk-accordion-content">
                         向いている方角を示すデータパック。表示方法は全部で3通り。<br>
                         1,左上に常に表示<br>
-                        <img data-src="./img/dendens_Compass_Resources/1.png" width="500" alt="" uk-img><br><br>
+                        <img data-src="./img/dendens_Compass_Resources/1.png" width="500" alt="dendens_compass_ex1" uk-img><br><br>
 
                         2.ホットバーの一番右を使用して表示<br>
                         ※ホットバー１番右のアイテムが消えるので注意！<br>
                         ※リソースパック「<a href="./dist/denden_compass/dendens_Compass_Resources.zip">denden's_Compass_Resources</a>」必須<br>
-                        <img data-src="./img/dendens_Compass_Resources/2.png" width="500" alt="" uk-img><br><br>
+                        <img data-src="./img/dendens_Compass_Resources/2.png" width="500" alt="dendens_compass_ex2" uk-img><br><br>
 
                         3.アクションバーに常に表示<br>
-                        <img data-src="./img/dendens_Compass_Resources/3.png" width="500" alt="" uk-img><br><br>
+                        <img data-src="./img/dendens_Compass_Resources/3.png" width="500" alt="dendens_compass_ex3" uk-img><br><br>
 
                         使い方(チャット欄で入力)<br>
                         最初に必ずこれを<br>
@@ -359,9 +359,9 @@
                 <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.17_v1.018.zip">TEX_D2 NE_32x_1.17.x</a><br>
                 <a href="./dist/TEX_D2_32x/TEX_D2 NE_32x_1.18_v1.018.zip">TEX_D2 NE_32x_1.18.x</a><br>
                 <div>
-                  <img data-src="./img/TEX_D2_32x/1.png" width="500" alt="" uk-img><br>
-                  <img data-src="./img/TEX_D2_32x/2.jpeg" width="500" alt="" uk-img><br>
-                  <img data-src="./img/TEX_D2_32x/3.jpeg" width="500" alt="" uk-img><br>
+                  <img data-src="./img/TEX_D2_32x/1.png" width="500" alt="TEX_D2_32x_ex1" uk-img><br>
+                  <img data-src="./img/TEX_D2_32x/2.jpeg" width="500" alt="TEX_D2_32x_ex2" uk-img><br>
+                  <img data-src="./img/TEX_D2_32x/3.jpeg" width="500" alt="TEX_D2_32x_ex3" uk-img><br>
                 </div>
               </li>
 <!--
@@ -439,7 +439,7 @@
         <div class="uk-child-width-expand@s uk-flex uk-flex-center" uk-grid>
           <a class="uk-margin-top uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle" href="./project.html" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-              <img src="img/logo.png" alt="" uk-cover>
+              <img src="img/logo.png" alt="about_logo" uk-cover>
               <canvas width="300" height="200"></canvas>
             </div>
             <div>
@@ -450,7 +450,7 @@
           </a>
           <a class="uk-margin-top uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle" href="./member.html" uk-grid>
             <div class="uk-card-media-left uk-cover-container uk-card-large">
-              <img src="img/top.jpg" alt="" uk-cover>
+              <img src="img/top.jpg" alt="about_top" uk-cover>
               <canvas width="200" height="200"></canvas>
             </div>
             <div>
