--- a/member.html
+++ b/member.html
@@ -86,7 +86,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/member/denden.png" alt="">
+                <img src="./img/member/denden.png" alt="p_denden">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">でんでん</h3>
@@ -99,7 +99,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/member/momotarojii.png" alt="">
+                <img src="./img/member/momotarojii.png" alt="p_momotarojii">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">momotarojii</h3>
@@ -112,7 +112,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/member/sui.png" alt="">
+                <img src="./img/member/sui.png" alt="p_sui">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">スイ</h3>
@@ -126,7 +126,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/unknown.png" alt="">
+                <img src="./img/unknown.png" alt="p_allicin">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">ALLICIN (ｱﾘｼﾝ)</h3>
@@ -140,7 +140,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/member/mutuki.png" alt="">
+                <img src="./img/member/mutuki.png" alt="p_mutuki">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">睦月</h3>
@@ -153,7 +153,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/member/eda.png" alt="">
+                <img src="./img/member/eda.png" alt="p_eda">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">Eda/Edo</h3>
@@ -166,7 +166,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/member/tks.png" alt="">
+                <img src="./img/member/tks.png" alt="p_tks">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">tks</h3>
@@ -179,7 +179,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/member/tazan.png" alt="">
+                <img src="./img/member/tazan.png" alt="p_tazn">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">ターザン(TAZN)</h3>
@@ -192,7 +192,7 @@
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="./img/member/azumaru.png" alt="">
+                <img src="./img/member/azumaru.png" alt="p_azumaru">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">あずまる</h3>
