--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
               <li>
                 <img data-src="./img/dendens_apex_datapack/apexHeader.png" width="500" alt="dendens_apex_detapack_thumnal" uk-img><br>
                 APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。 <br>
-                β版ではシングルプレイのみ対応しています。（マルチプレイにて動作させると、意図しない挙動や、そもそも挙動しないなどがあると思います。） <br>
-                主に対対MOB用に制作してるので、プレイヤー同士への効果はありません。 <br>
-                APEXのレジェンドたちが、マイクラの世界に迷い込んでしまったら…というコンセプトで作っているので、いつものサバイバルのマイクラを楽しみながら、クールタイムを待ち、スキルを楽しんでもらえたらなと思います。<br>
+                主に対MOB用に制作してるので、プレイヤー同士への効果はありません。 <br>
+                APEXのレジェンドたちが、マイクラの世界に迷い込んでしまったら…というコンセプトで作っているので、いつものサバイバルのマイクラを楽しみながら、クールタイムを待ち、スキルを楽しんでもらえたらなと思います。 <br>
+                マルチプレイ対応しました。 <br>
                 制作者 でんでん<br>
                 <span uk-icon="icon: cloud-download"></span>
                 <a href="./dist/dendens_apex_datapacks/dendens_apex_datapacks_openBeta.zip">dendens_apex_datapacks_openBeta</a><br>
