Update index.html 20230509-2

--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
           <div class="uk-width-1-1 uk-card uk-card-default">
             <div class="uk-card-body">
               <div class="uk-card-title">
+                DENDEN'S COMPASS Ver2 配布 <nobr class="uk-text-meta">2023-04-17</nobr>
+              </div>
+              でんでんが制作したデータパック「DENDEN'S COMPASS VER.2.0」が配布開始！ <br>
+            </div>
+          </div>
+          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
+            <div class="uk-card-body">
+              <div class="uk-card-title">
                 データパック・リソースパック配布第二弾  <nobr class="uk-text-meta">2022-06-06</nobr>
               </div>
               でんでんが制作したデータパック「dendens apex datapacks」がベータ配布開始！
@@ -186,7 +194,7 @@
               dendens apex datapacks openBeta
             </a></li>
             <li><a href="#">
-              denden's Compass ver.1.0
+              denden's Compass ver.2.0
             </a></li>
             <li><a href="#">
               TEX－D2 NE 32x
@@ -203,7 +211,7 @@
                 <span class="uk-badge">データパック</span> <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.18.2</span>
               </li>
               <li>
-                <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.18.1</span>
+                <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.19.4</span>
               </li>
               <li>
                 <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.16+</span>
@@ -313,7 +321,7 @@
                 <img data-src="./img/dendens_Compass_Resources/compass_top.jpg" width="500" alt="dendens_compass_thumnal" uk-img><br>
                 画面上に方角を表示させるデータパックです<br>
                 制作者 でんでん<br>
-                <span uk-icon="icon: cloud-download"></span> <a href="./dist/denden_compass/dendens_compass.zip">dendens_compass</a>
+                <span uk-icon="icon: cloud-download"></span> <a href="./dist/denden_compass/dendens_commpa1.19.4s.zip">dendens_compass</a>
                 <div>
                   <ul uk-accordion class="uk-background-muted">
                     <li>
@@ -345,6 +353,10 @@
                         <code style="background-color:#777777;color:#ffffff;">/function compass_manage:set2</code><br>
                         コンパス３にセット<br>
                         <code style="background-color:#777777;color:#ffffff;">/function compass_manage:set3</code><br>
+                        
+                        <change log>
+                          ver.2.0
+                          コンパス表示設定変更時にチャットログがでてわかりやすくなった
                       </div>
                     </li>
                   </ul>
