--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="uk-width-1-1 uk-card uk-card-default">
             <div class="uk-card-body">
               <div class="uk-card-title">
-                DENDEN'S COMPASS Ver2 配布 <nobr class="uk-text-meta">2023-04-17</nobr>
+                DENDEN'S COMPASS VER.2.0 配布 <nobr class="uk-text-meta">2023-04-17</nobr>
               </div>
               でんでんが制作したデータパック「DENDEN'S COMPASS VER.2.0」が配布開始！ <br>
             </div>
@@ -352,11 +352,15 @@
                         コンパス２にセット<br>
                         <code style="background-color:#777777;color:#ffffff;">/function compass_manage:set2</code><br>
                         コンパス３にセット<br>
-                        <code style="background-color:#777777;color:#ffffff;">/function compass_manage:set3</code><br>
+                        <code style="background-color:#777777;color:#ffffff;">/function compass_manage:set3</code><br><br>
                         
-                        <change log>
-                          ver.2.0
-                          コンパス表示設定変更時にチャットログがでてわかりやすくなった
+                        <dl class="uk-description-list uk-description-list-divider">
+                          <dt>chage log</dt>
+                          <dt>・ver.2.0<dt>
+                          <dd>
+                              コンパス表示設定変更時にチャットログがでてわかりやすくなった
+                          </dd>
+                        </dl>
                       </div>
                     </li>
                   </ul>
