--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                         
                         <dl class="uk-description-list uk-description-list-divider">
                           <dt>chage log</dt>
-                          <dt>・ver.2.0<dt>
+                          <dt>・ver.2.0</dt>
                           <dd>
                               コンパス表示設定変更時にチャットログがでてわかりやすくなった
                           </dd>
