--- a/index.html
+++ b/index.html
@@ -90,98 +90,40 @@
 
       <div class="">
         <div class="uk-background-cover uk-background-fixed uk-height-1-1 uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url(./img/top.jpg);" uk-height-viewport="offset-top: true; offset-bottom: 5">
-          <!--<p class="uk-heading-2xlarge uk-text-success uk-overlay uk-overlay-default"></p>-->
           <img data-src="img/logo.png" width="500vh" uk-img alt="logo-image">
         </div>
       </div>
 
     </div>
-<!--
-      <div class="uk-margin-large-top uk-width-4-5@m uk-container">
-        <div class="uk-flex uk-margin-top">
-          <div class="uk-width-1-2 uk-margin-large-right">
-            <img src="./img/1.png">
-          </div>
-          <div class="uk-width-1-2 uk-text-break">
-            <p>
-              ここに説明文が入ります1
-              aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-            </p>
-          </div>
-        </div>
-        <div class="uk-flex uk-margin-small-top">
-          <div class="uk-width-1-2 uk-margin-large-right uk-text-break">
-            <p>
-              ここに説明が入ります2
-              bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
-            </p>
-          </div>
-          <div class="uk-width-1-2">
-            <img src="./img/2.png">
-          </div>
-        </div>
-      </div>
--->
 
       <a name="topics"></a>
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
         Topics
       </div>
       <div class="uk-container uk-width-4-5@m">
-        <div class="">
-          <div class="uk-width-1-1 uk-card uk-card-default">
-            <div class="uk-card-body">
-              <div class="uk-card-title">
-                DENDEN'S COMPASS VER.2.0 配布 <nobr class="uk-text-meta">2023-04-17</nobr>
-              </div>
-              でんでんが制作したデータパック「DENDEN'S COMPASS VER.2.0」が配布開始！ <br>
-            </div>
-          </div>
-          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
-            <div class="uk-card-body">
-              <div class="uk-card-title">
-                データパック・リソースパック配布第二弾  <nobr class="uk-text-meta">2022-06-06</nobr>
-              </div>
-              でんでんが制作したデータパック「dendens apex datapacks」がベータ配布開始！
-            </div>
-          </div>
-          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
-            <div class="uk-card-body">
-              <div class="uk-card-title">
-                データパック・リソースパック配布第一弾  <nobr class="uk-text-meta">2022-02-01</nobr>
-              </div>
-              でんでんが制作したデータパック「DENDEN'S COMPASS VER.1.0」が配布開始！ <br>
-              睦月が制作したリソースパック「TEX－D2 NE 32x」が配布開始！
-            </div>
-          </div>
-          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
-            <div class="uk-card-body">
-              <div class="uk-card-title">
-                公式HP開設！  <nobr class="uk-text-meta">2022-02-01</nobr>
-              </div>
-              公式HPが開設されました！！
-            </div>
-          </div>
-          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
-            <div class="uk-card-body">
-              <div class="uk-card-title">
-                Panilla設立！  <nobr class="uk-text-meta">2021-09-11</nobr>
-              </div>
-              当グループが設立されました！！
-            </div>
-          </div>
-<!--
-          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
-            <div class="uk-card-body">
-              <div class="uk-card-title">
-                Read more
-              </div>
-
-            </div>
-          </div>
--->
-        </div>
+        <div class="" id="topics">
       </div>
+      <script>
+        var xhr = new XMLHttpRequest(),
+            method = "GET",
+            url = "topics.html";
+        var topics = document.getElementById("topics");
+
+        xhr.responseType = "document";
+        xhr.open(method, url, true);
+        xhr.onreadystatechange = function () {
+          if(xhr.readyState === 4 && xhr.status === 200) {
+            var restxt=xhr.responseXML;
+            var topicscontent = "";
+            for(let i = 0 ; i < 3 ; i++){
+              topicscontent += restxt.getElementById("topics").children[i].outerHTML
+              console.log(topicscontent)
+            }
+            topics.innerHTML = topicscontent;            
+          }
+        };
+        xhr.send();
+      </script>
 
       <a name="downloads"></a>
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
