--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </ul>
             <ul class="uk-switcher switcher-container">
               <li>
-                <img data-src="./img/dendens_apex_datapack/apexHeader2.png" width="500" alt="dendens_apex_detapack_thumnal" uk-img><br>
+                <img data-src="./img/dendens_apex_datapack/apexHeaderHorizon.png" width="500" alt="dendens_apex_detapack_thumnal" uk-img><br>
                 APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。 <br>
                 主に対MOB用に制作してるので、プレイヤー同士への効果はありません。 <br>
                 APEXのレジェンドたちが、マイクラの世界に迷い込んでしまったら…というコンセプトで作っているので、いつものサバイバルのマイクラを楽しみながら、クールタイムを待ち、スキルを楽しんでもらえたらなと思います。 <br>
@@ -200,6 +200,9 @@
                         オクタン <br>
                         <code style="background-color:#777777;color:#ffffff;">/function apex:set_legend/set_octane</code> <br>
 
+                        ホライゾン <br>
+                        <code style="background-color:#777777;color:#ffffff;">/function apex:set_legend/set_horizon</code> <br>
+                        
                         選択なし <br>
                         <code style="background-color:#777777;color:#ffffff;">/function apex:set_legend/set_nothing</code> <br><br>
 
