--- a/topics.html
+++ b/topics.html
@@ -95,6 +95,14 @@
           <div class="uk-width-1-1 uk-card uk-card-default" id="content">
             <div class="uk-card-body">
               <div class="uk-card-title">
+                dendens apex datapacks 更新 <nobr class="uk-text-meta">2023-04-17</nobr>
+              </div>
+              でんでんが制作したデータパック「dendens apex datapacks」にホライゾンが追加！ <br>
+            </div>
+          </div>         
+          <div class="uk-width-1-1 uk-card uk-card-default" id="content">
+            <div class="uk-card-body">
+              <div class="uk-card-title">
                 DENDEN'S COMPASS VER.2.0 配布 <nobr class="uk-text-meta">2023-04-17</nobr>
               </div>
               でんでんが制作したデータパック「DENDEN'S COMPASS VER.2.0」が配布開始！ <br>
