--- a/index.html
+++ b/index.html
@@ -207,14 +207,26 @@
                         <code style="background-color:#777777;color:#ffffff;">/function apex:set_legend/set_nothing</code> <br><br>
 
                         ③クールタイムを待つ <br>
-                        クールタイムは原作ゲームと同じ時間で設定しています。 <br><br>
+                        クールタイムは原作ゲームと同じ時間で設定しています。<br>
+                        ※本家様のアップデートに合わせているわけではないので、異なる場合もあります。<br><br>
 
-                        ◎戦術、アルティメットはクールダウンが終わると、専用アイテムが付与されます。投げる(デフォルト"Q")ことで使用できます。 <br>
+                        ◎戦術、アルティメットはクールダウンが終わると、専用アイテムが付与されます。投げる(デフォルト"Q")もしくは右クリックで使用できます。 <br>
                         ※インベントリがいっぱいの場合はアイテムが付与されません。
-                        「アビリティが使用可能」「アルティメットが使用可能」の表示がでても、インベントリがいっぱいでアイテムが付与されなかった場合は「<code style="background-color:#777777;color:#ffffff;">/reload</code>」で再読み込みをしてください。 <br>
-                        ※コースティックのアルティメット(ガスグレネード)のみ、スニーク右クリックで投げる軌道(赤いガイド)の確認、右クリックで投擲です。 <br><br><br>
-
-
+                        「アビリティが使用可能」「アルティメットが使用可能」の表示がでても、インベントリがいっぱいでアイテムが付与されなかった場合は「<code style="background-color:#777777;color:#ffffff;">/reload</code>」で再読み込みをしてください。 <br><br>
+                        ＜ブラッドハウンド＞<br>
+                        戦術アビリティ　Q<br>                    
+                        アルティメット　Q<br>
+                        ＜オクタン＞<br>
+                        戦術アビリティ　Q<br>                    
+                        アルティメット　Q<br>
+                        ＜コースティック＞<br>
+                        戦術アビリティ　Q<br>                    
+                        アルティメット　右クリック<br>
+                        ※スニーク+右クリックで投擲ガイド表示<br>
+                        ＜ホライゾン＞<br>
+                        戦術アビリティ　Q<br>
+                        ※ポータル生成中に右クリックで中断<br><br>
+                                 
                         ●細かい仕様
                         <ul>
                           ブラッドハウンド
@@ -240,7 +252,7 @@
                               <li>ガストラップのストック数は３つまでです。</li>
                               <li>ガストラップをワールドに置ける数は３つまでです。４つ目以降は、設置してからの時間が一番長いガストラップを消滅させて、新たにガストラップを設置します。</li>
                               <li>ガストラップの足の部分(黄色い部分)を殴る、矢を当てるなどをすると、ガストラップが消滅します。また、その時にコースティックに設定したプレイヤーが半径3マス以内にいれば、そのプレイヤーのガストラップ保有数は1つ増えます。</li>
-                              <li>ガストラップの風船部分を殴る、矢を当てるなどするか、半径４マス以内に敵対MOBが入った場合(壁越しは検知されません)、敵対MOBダメージを与えます。</li>
+                              <li>ガストラップの風船部分を殴る、矢を当てるなどするか、半径４マス以内に敵対MOBが入った場合(壁越しは検知されません)、ガス噴射が開始します。プレイヤーへのダメージはありません。</li>
                             </ul>
                           </li><br>
                           オクタン
@@ -250,7 +262,21 @@
                               <li>ジャンプパッドはワールドに１つしか設置できません。新しいジャンプパッドを設置する時に、前のジャンプパッドは破壊されます。</li>
                               <li>ジャンプパッドは殴る、矢を当てるなどすれば破壊できます。</li>
                             </ul>
+                          </li><br>
+                           ホライゾン
+                          <li>
+                            アルティメット
+                            <ul>
+                              <li>ニュートを攻撃しても破壊はされません。</li>
+                            </ul>
                           </li>
+<!--                           <br> -->
+<!--                           レイス
+                          <li>
+                            アルティメット
+                            <ul>
+                              <liポータルはワールドに1つだけ生成できます。新たにポータルを生成する際は、前のポータルを消滅させます。</li>
+                            </ul> -->
                         </ul><br>
                         <div class="uk-text-center">
                           ●遊んでみた感想お待ちしています <br>
