--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Minecraftのデータパックやリソースパック、テクスチャパックの配布をしています。バニラから少しだけ寄り道をして、もっと楽しめるマイクラを目指しています。いつもと少しだけ違うマイクラで、多くの楽しみを見つけてみてください。" />
+    <meta name="description" content="マイクラのデータパックやリソースパック、テクスチャパックの配布をしています。バニラから少しだけ寄り道をして、もっと楽しめるマイクラを目指しています。いつもと少しだけ違うマイクラで、多くの楽しみを見つけてみてください。" />
 
     <meta property="og:url" content="https://www.minecraftpanilla.com/" />
     <meta property="og:type" content=" website" />
