--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/ fb# website: http://ogp.me/ns/website#">
-    <title>Panilla!</title>
+    <title>Panilla! | マイクラのデータパック・リソースパック作成集団</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
