--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="uk-margin-left uk-margin-right ">
 
       <div class="">
-        <div class="uk-background-cover uk-background-fixed uk-height-1-1 uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url(./img/top.jpg);" uk-height-viewport="offset-top: true; offset-bottom: 5">
+        <div class="uk-background-cover uk-background-fixed uk-height-1-1 uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url(./img/header.jpg);" uk-height-viewport="offset-top: true; offset-bottom: 5">
           <img data-src="img/logo.png" width="500vh" uk-img alt="logo-image">
         </div>
       </div>
@@ -100,6 +100,12 @@
       <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
         Topics
       </div>
+      <a id="history" class="uk-flex uk-flex-center" href="./topics.html">
+        history→
+      </div>
+
+      </script>
+
       <div class="uk-container uk-width-4-5@m">
         <div class="" id="topics">
       </div>
@@ -138,9 +144,9 @@
             <li><a href="#">
               denden's Compass ver.2.0
             </a></li>
-            <li><a href="#">
+            <!-- <li><a href="#">
               TEX－D2 NE 32x
-            </a></li>
+            </a></li> -->
 <!--
             <li><a href="#">
               DP/RP名称
@@ -289,7 +295,7 @@
                 </div>
               </li>
               <li>
-                <img data-src="./img/dendens_Compass_Resources/compass_top.jpg" width="500" alt="dendens_compass_thumnal" uk-img><br>
+                <img data-src="./img/dendens_Compass_Resources/compass_header.jpg" width="500" alt="dendens_compass_thumnal" uk-img><br>
                 画面上に方角を表示させるデータパックです<br>
                 制作者 でんでん<br>
                 <span uk-icon="icon: cloud-download"></span> <a href="./dist/denden_compass/dendens_commpa1.19.4s.zip">dendens_compass</a>
@@ -338,7 +344,7 @@
                 </div>
 
               </li>
-              <li>
+              <!-- <li>
                 ファンタジー風リソースパック 疑似レイトレーシング対応<br>
                 制作者 mutuki_1204<br>
                 <span uk-icon="icon: cloud-download"></span><br>
@@ -350,7 +356,7 @@
                   <img data-src="./img/TEX_D2_32x/2.jpeg" width="500" alt="TEX_D2_32x_ex2" uk-img><br>
                   <img data-src="./img/TEX_D2_32x/3.jpeg" width="500" alt="TEX_D2_32x_ex3" uk-img><br>
                 </div>
-              </li>
+              </li> -->
 <!--
               <li>
                 まだ作られていないリソースパック<br>
@@ -387,7 +393,14 @@
               Q1. データパックの導入方法を知りたい。
             </a>
             <div class="uk-accordion-content">
-              <p>A1. 現在準備中のため、各自検索等を駆使して調べてください。</p>
+              <p>A1. ●データパックの場合<br>
+                「saves」を開き、データパックを導入したいフォルダを開く。<br>
+                「datapacks」フォルダに、ダウンロードして、展開したファイルを貼り付け。<br>
+                ワールドに入って、各データパックのロードテキストがチャット欄にでれば成功。既にワールドに参加している場合は「/reload」コマンドを使用して、読み込みを行う。<br><br><br>
+                
+                ●リソースパックの場合<br>
+                「resourcepack」を開き、ダウンロードしたリソースパックデータを貼り付け。マイクラの「設定」「ビデオ設定」「リソースパック」から、使いたいものを右側に移す。 <br>
+                </p>
             </div>
           </li>
           <li>
@@ -437,7 +450,7 @@
           </a>
           <a class="uk-margin-top uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle" href="./member.html" uk-grid>
             <div class="uk-card-media-left uk-cover-container uk-card-large">
-              <img src="img/top.jpg" alt="about_top" uk-cover>
+              <img src="img/header.jpg" alt="about_top" uk-cover>
               <canvas width="200" height="200"></canvas>
             </div>
             <div>
