--- a/member.html
+++ b/member.html
@@ -96,7 +96,7 @@
               </div>
             </div>
           </div>
-          <div>
+          <!-- <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
                 <img src="./img/member/momotarojii.png" alt="p_momotarojii">
@@ -134,7 +134,7 @@
                 <span class="uk-badge">Architect</span><br>
               </div>
             </div>
-          </div>
+          </div> -->
           <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
@@ -148,19 +148,19 @@
               </div>
             </div>
           </div>
-          <div>
+          <!-- <div>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
                 <img src="./img/member/azumaru.png" alt="p_azumaru">
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">あずまる</h3>
-                <p>コメントなし</p>
+                <p>コメントなし</p> -->
                 <!-- <a class="" uk-icon="icon:twitter; ratio:1.5" href="https://twitter.com/tks_me"></a><a href="https://twitter.com/tks_me">@tks_me</a><br> -->
-                <span class="uk-badge">Movie / graphics</span><br>
+                <!-- <span class="uk-badge">Movie / graphics</span><br>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
