--- a/topics.html
+++ b/topics.html
@@ -92,7 +92,7 @@
       </div>
       <div class="uk-container uk-width-4-5@m">
         <div class="" id="topics">
-          <div class="uk-width-1-1 uk-card uk-card-default" id="content">
+          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top" id="content">
             <div class="uk-card-body">
               <div class="uk-card-title">
                 dendens apex datapacks 更新 <nobr class="uk-text-meta">2023-04-17</nobr>
@@ -100,7 +100,7 @@
               でんでんが制作したデータパック「dendens apex datapacks」にホライゾンが追加！ <br>
             </div>
           </div>         
-          <div class="uk-width-1-1 uk-card uk-card-default" id="content">
+          <div class="uk-width-1-1 uk-card uk-card-default uk-margin-small-top">
             <div class="uk-card-body">
               <div class="uk-card-title">
                 DENDEN'S COMPASS VER.2.0 配布 <nobr class="uk-text-meta">2023-04-17</nobr>
