--- a/contents/dendens_apex_datapack.html
+++ b/contents/dendens_apex_datapack.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Panilla members!</title>
+    <title>DENDENS APEX DATAPACKS OPENBETA</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/uikit.min.css" />
@@ -69,16 +69,18 @@
             DENDENS APEX DATAPACKS OPENBETA
         </div>
         <div class="">
-            <div class="uk-child-width-1-4 uk-grid-small" uk-grid>
-
-                <div class="uk-container uk-width-3-4 uk-card-body uk-card-default">
+            <div class="uk-child-width-1-4@xl uk-grid-small uk-margin-left" uk-grid>
+                
+                <div class="uk-container uk-width-3-4@xl uk-card-body uk-card-default">
+                  <span class="uk-badge">データパック</span> <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.19.4</span><br>
+                  <a href="#dllink" class="uk-hidden@xl">ダウンロードはここから</a><br>
                     <<概要>><br>
                     制作者 でんでん<br>
                     APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。 <br>
                     主に対MOB用に制作してるので、プレイヤー同士への効果はありません。 <br>
                     APEXのレジェンドたちが、マイクラの世界に迷い込んでしまったら…というコンセプトで作っているので、いつものサバイバルのマイクラを楽しみながら、クールタイムを待ち、スキルを楽しんでもらえたらなと思います。 <br>
                     マルチプレイ対応しました。 <br>
-                    ●使い方
+                    ●使い方<br>
                     ①導入したら <br>
                     <code style="background-color:#777777;color:#ffffff;">/reload</code>
                     を実行 <br>
@@ -202,7 +204,8 @@
                     </div>
                 </div>
                 <div >
-                    <div class="uk-card-body uk-card-default" uk-sticky="offset:8vh;">
+                  <a name="dllink"></a>
+                    <div class="uk-card-body uk-card-default" uk-sticky="offset:10vh;">
                         <img data-src="/img/dendens_apex_datapack/apexHeaderHorizon.png" width="500" alt="dendens_apex_detapack_thumnal" uk-img><br>
                         <a href="/dist/dendens_apex_datapacks/dendens_apex_datapacks_openBeta.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top ">
                             <span uk-icon="icon: cloud-download"></span>
