--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="minecraft Panilla" />
     <meta property="og:description" content="どこから集まったのかよくわからないメンバーが、ぼちぼちデータ配布をしていきます。バニラから少しだけ寄り道をして、もっと楽しめるマイクラを目指しています。いつもと少しだけ違うマイクラで、多くの楽しみを見つけてみてください。" />
     <meta property="og:site_name" content="Panilla" />
-    <meta property="og:image" content="/img/thum.jpg" />
+    <meta property="og:image" content="https://www.minecraftpanilla.com/img/thum.jpg" />
 
     <link rel="stylesheet" href="css/uikit.min.css" />
     <script src="js/uikit.min.js"></script>
