--- a/contents/dendens_apex_datapack.html
+++ b/contents/dendens_apex_datapack.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Panilla members!</title>
+    <title>DENDENS APEX DATAPACKS OPENBETA</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/uikit.min.css" />
@@ -70,8 +70,10 @@
         </div>
         <div class="">
             <div class="uk-child-width-1-4@xl uk-grid-small uk-margin-left" uk-grid>
-
+                
                 <div class="uk-container uk-width-3-4@xl uk-card-body uk-card-default">
+                  <span class="uk-badge">データパック</span> <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.19.4</span><br>
+                  <a href="#dllink" class="uk-hidden@xl">ダウンロードはここから</a><br>
                     <<概要>><br>
                     制作者 でんでん<br>
                     APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。 <br>
@@ -202,6 +204,7 @@
                     </div>
                 </div>
                 <div >
+                  <a name="dllink"></a>
                     <div class="uk-card-body uk-card-default" uk-sticky="offset:10vh;">
                         <img data-src="/img/dendens_apex_datapack/apexHeaderHorizon.png" width="500" alt="dendens_apex_detapack_thumnal" uk-img><br>
                         <a href="/dist/dendens_apex_datapacks/dendens_apex_datapacks_openBeta.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top ">
