--- a/contents/dendens_Compass_Resources.html
+++ b/contents/dendens_Compass_Resources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Panilla members!</title>
+    <title>DENDEN'S COMPASS VER.2.0</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/uikit.min.css" />
@@ -66,12 +66,14 @@
 
     <div class="uk-margin-left uk-margin-right">
         <div class="uk-flex uk-flex-center uk-margin-large-top uk-heading-small">
-            denden's Compass ver.2.0
+            DENDEN'S COMPASS VER.2.0
         </div>
         <div class="">
             <div class="uk-child-width-1-4@xl uk-grid-small uk-margin-left" uk-grid>
 
                 <div class="uk-container uk-width-3-4@xl uk-card-body uk-card-default">
+                    <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.19.4</span><br>
+                    <a href="#dllink" class="uk-hidden@xl">ダウンロードはここから</a><br>
                     <<概要>><br>
                     制作者 でんでん<br>
                     画面上に方角を表示させるデータパックです。<br>
@@ -112,6 +114,7 @@
                     </dl>
                 </div>
                 <div >
+                    <a name="dllink"></a>
                     <div class="uk-card-body uk-card-default" uk-sticky="offset:10vh;">
                         <img data-src="/img/dendens_Compass_Resources/compass_top.jpg" width="500" alt="dendens_apex_detapack_thumnal" uk-img><br>
                         <a href="/dist/denden_compass/dendens_commpa1.19.4s.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top ">
