add discription,change sitemap

--- a/index.html
+++ b/index.html
@@ -138,44 +138,44 @@
 
           <ul class="uk-slider-items uk-grid">
             <li class="uk-width-3-4">
-              <a href="/contents/dendens_apex_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-child-width-1-7@s uk-margin" uk-grid>
+              <a href="/contents/dendens_apex_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
                 <div class="uk-panel">
                   <img src="/img/dendens_apex_datapack/apexHeaderHorizon.png" width="1800" height="1200" alt="">
                   <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
-                    <h3 class="uk-margin-remove">DENDENS APEX DATAPACKS OPENBETA</h3>
+                    <h3 class="uk-margin-remove uk-visible@s">DENDENS APEX DATAPACKS OPENBETA</h3>
                     <p class="uk-margin-remove">APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。</p>
                   </div>
                 </div>
               </a>
             </li>
             <li class="uk-width-3-4">
-              <a href="/contents/dendens_Compass_Resources.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-child-width-1-7@s uk-margin" uk-grid>
+              <a href="/contents/dendens_Compass_Resources.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
                 <div class="uk-panel">
                   <img src="/img/dendens_Compass_Resources/compass_top.jpg" width="1800" height="1200" alt="">
                   <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
-                    <h3 class="uk-margin-remove">DENDEN'S COMPASS VER.2.0</h3>
+                    <h3 class="uk-margin-remove uk-visible@s">DENDEN'S COMPASS VER.2.0</h3>
                     <p class="uk-margin-remove">画面上に方角を表示させるデータパックです。</p>
                   </div>
                 </div>
               </a>
             </li>
             <li class="uk-width-3-4">
-              <a href="/contents/dendens_apex_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-child-width-1-7@s uk-margin" uk-grid>
+              <a href="/contents/dendens_apex_datapack.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
                 <div class="uk-panel">
                   <img src="/img/dendens_apex_datapack/apexHeaderHorizon.png" width="1800" height="1200" alt="">
                   <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
-                    <h3 class="uk-margin-remove">DENDENS APEX DATAPACKS OPENBETA</h3>
+                    <h3 class="uk-margin-remove uk-visible@s">DENDENS APEX DATAPACKS OPENBETA</h3>
                     <p class="uk-margin-remove">APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。</p>
                   </div>
                 </div>
               </a>
             </li>
             <li class="uk-width-3-4">
-              <a href="/contents/dendens_Compass_Resources.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-child-width-1-7@s uk-margin" uk-grid>
+              <a href="/contents/dendens_Compass_Resources.html" class="uk-link-heading uk-card-hover uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
                 <div class="uk-panel">
                   <img src="/img/dendens_Compass_Resources/compass_top.jpg" width="1800" height="1200" alt="">
                   <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
-                    <h3 class="uk-margin-remove">DENDEN'S COMPASS VER.2.0</h3>
+                    <h3 class="uk-margin-remove uk-visible@s">DENDEN'S COMPASS VER.2.0</h3>
                     <p class="uk-margin-remove">画面上に方角を表示させるデータパックです。</p>
                   </div>
                 </div>
@@ -286,7 +286,7 @@
           <a class="uk-margin-top uk-card uk-card-default uk-grid-collapse uk-margin-left uk-child-width-1-2 uk-link-toggle uk-link-toggle uk-card-hover " href="/project.html" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
               <img src="/img/logo.png" alt="about_logo" uk-cover>
-              <canvas width="300" height="200"></canvas>
+              <canvas width="200" height="200"></canvas>
             </div>
             <div>
               <div class="uk-card-body uk-card-small uk-text-large">
