--- a/contents/dendens_Compass_Resources.html
+++ b/contents/dendens_Compass_Resources.html
@@ -4,6 +4,15 @@
     <title>DENDEN'S COMPASS VER.2.0</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <meta name="description" content="マイクラの画面上に方角を表示させるデータパックです。" />
+
+    <meta property="og:url" content="https://www.minecraftpanilla.com/contents/dendens_Compass_Resources.html" />
+    <meta property="og:type" content=" website" />
+    <meta property="og:title" content="minecraft Panilla | DENDENS APEX DATAPACKS OPENBETA" />
+    <meta property="og:description" content="マイクラの画面上に方角を表示させるデータパックです。" />
+    <meta property="og:site_name" content="Panilla | DENDENS APEX DATAPACKS OPENBETA" />
+    <meta property="og:image" content="https://www.minecraftpanilla.com/img/dendens_Compass_Resources/compass_top.jpg" />
     <link rel="stylesheet" href="/css/uikit.min.css" />
     <script src="/js/uikit.min.js"></script>
     <script src="/js/uikit-icons.min.js"></script>
@@ -69,11 +78,11 @@
             DENDEN'S COMPASS VER.2.0
         </div>
         <div class="">
-            <div class="uk-child-width-1-4@xl uk-grid-small uk-margin-left" uk-grid>
+            <div class="uk-child-width-1-4@m uk-grid-small uk-margin-left" uk-grid>
 
-                <div class="uk-container uk-width-3-4@xl uk-card-body uk-card-default">
+                <div class="uk-container uk-width-3-4@m uk-card-body uk-card-default">
                     <span class="uk-badge">データパック</span> <span class="uk-badge">Version 1.19.4</span><br>
-                    <a href="#dllink" class="uk-hidden@xl">ダウンロードはここから</a><br>
+                    <a href="#dllink" class="uk-hidden@m">ダウンロードはここから</a><br>
                     <<概要>><br>
                     制作者 でんでん<br>
                     画面上に方角を表示させるデータパックです。<br>
@@ -113,17 +122,17 @@
                         </dd>
                     </dl>
                 </div>
-                <div >
+                <div class="uk-width-1-4@m ">
                     <a name="dllink"></a>
                     <div class="uk-card-body uk-card-default" uk-sticky="offset:10vh;">
                         <img data-src="/img/dendens_Compass_Resources/compass_top.jpg" width="500" alt="dendens_apex_detapack_thumnal" uk-img><br>
-                        <a href="/dist/denden_compass/dendens_commpa1.19.4s.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top ">
+                        <a href="/dist/denden_compass/dendens_commpa1.19.4s.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
                             <span uk-icon="icon: cloud-download"></span>
-                            dendens_compass
+                            dendens compass
                         </a><br>
-                        <a href="/dist/denden_compass/dendens_Compass_Resources.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top ">
+                        <a href="/dist/denden_compass/dendens_Compass_Resources.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
                             <span uk-icon="icon: cloud-download"></span>
-                            denden's_Compass_Resources
+                            denden's Compass Resources
                         </a><br>
                     </div>
                 </div>
