--- a/contents/dendens_apex_datapack.html
+++ b/contents/dendens_apex_datapack.html
@@ -4,6 +4,15 @@
     <title>DENDENS APEX DATAPACKS OPENBETA</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="APEX Legendsのレジェンドのアビリティとアルティメットをまいくらで再現したデータパックです。" />
+
+    <meta property="og:url" content="https://www.minecraftpanilla.com/contents/dendens_apex_datapack.html" />
+    <meta property="og:type" content=" website" />
+    <meta property="og:title" content="minecraft Panilla | DENDENS APEX DATAPACKS OPENBETA" />
+    <meta property="og:description" content="APEX Legendsのレジェンドのアビリティとアルティメットをまいくらで再現したデータパックです。" />
+    <meta property="og:site_name" content="Panilla | DENDENS APEX DATAPACKS OPENBETA" />
+    <meta property="og:image" content="https://www.minecraftpanilla.com/img/dendens_apex_datapack/apexHeaderHorizon.png" />
+
     <link rel="stylesheet" href="/css/uikit.min.css" />
     <script src="/js/uikit.min.js"></script>
     <script src="/js/uikit-icons.min.js"></script>
@@ -71,9 +80,9 @@
         <div class="">
             <div class="uk-child-width-1-4@xl uk-grid-small uk-margin-left" uk-grid>
                 
-                <div class="uk-container uk-width-3-4@xl uk-card-body uk-card-default">
+                <div class="uk-container uk-width-3-4@m uk-card-body uk-card-default">
                   <span class="uk-badge">データパック</span> <span class="uk-badge">リソースパック</span> <span class="uk-badge">Version 1.19.4</span><br>
-                  <a href="#dllink" class="uk-hidden@xl">ダウンロードはここから</a><br>
+                  <a href="#dllink" class="uk-hidden@m">ダウンロードはここから</a><br>
                     <<概要>><br>
                     制作者 でんでん<br>
                     APEX Legendsのレジェンドのアビリティとアルティメットを再現したデータパックです。 <br>
@@ -203,17 +212,17 @@
                         <span class="uk-margin-small-right" uk-icon="twitter"></span><a href="https://twitter.com/dendend12345">@dendend12345</a>
                     </div>
                 </div>
-                <div >
+                <div class="uk-width-1-4@m">
                   <a name="dllink"></a>
                     <div class="uk-card-body uk-card-default" uk-sticky="offset:10vh;">
                         <img data-src="/img/dendens_apex_datapack/apexHeaderHorizon.png" width="500" alt="dendens_apex_detapack_thumnal" uk-img><br>
-                        <a href="/dist/dendens_apex_datapacks/dendens_apex_datapacks_openBeta.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top ">
+                        <a href="/dist/dendens_apex_datapacks/dendens_apex_datapacks_openBeta.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
                             <span uk-icon="icon: cloud-download"></span>
-                             dendens_apex_datapacks_openBeta
+                             dendens apex datapacks openBeta
                         </a><br>
-                        <a href="/dist/dendens_apex_datapacks/dendens_apex_resourcepack.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top ">
+                        <a href="/dist/dendens_apex_datapacks/dendens_apex_resourcepack.zip" class="uk-button uk-button-primary uk-width-1-1 uk-margin-top uk-text-break uk-padding-remove">
                             <span uk-icon="icon: cloud-download"></span>
-                             dendens_apex_resourcepack
+                             dendens apex resourcepack
                         </a><br>
                     </div>
                 </div>
